2015-08-11  Joseph Myers  <joseph@codesourcery.com>

	* math/auto-libm-test-in: Add more tests of acosh, asin, asinh,
	atanh, cabs, carg, cbrt, cosh, csqrt, erf, erfc, exp, exp10,
	expm1, hypot, log, log10, log1p, log2, pow, sinh, tan and tgamma.
	* math/auto-libm-test-out: Regenerated.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2015-08-10  Joseph Myers  <joseph@codesourcery.com>

	[BZ #18790]
	* sysdeps/ieee754/ldbl-128ibm/s_tanhl.c (__tanhl): Increase
	threshold for returning +/- 1.
	* math/auto-libm-test-in: Add more tests of tanh.
	* math/auto-libm-test-out: Regenerated.
	* sysdeps/i386/fpu/libm-test-ulps: Update.

2015-08-10  Andreas Schwab  <schwab@suse.de>

	[BZ #18781]
	* sysdeps/unix/sysv/linux/openat.c (__OPENAT) [MORE_OFLAGS]: Add
	MORE_OFLAGS to oflag.
	* io/test-lfs.c (do_test): Test openat64.

2015-08-10  Joseph Myers  <joseph@codesourcery.com>

	[BZ #18789]
	* sysdeps/ieee754/ldbl-128ibm/e_sinhl.c (__ieee754_sinhl): Use
	smaller threshold for returning the argument.
	* math/auto-libm-test-in: Add more tests of sinh.
	* math/auto-libm-test-out: Regenerated.
	* sysdeps/i386/fpu/libm-test-ulps: Update.

2015-08-09  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #18674]
	* sysdeps/i386/tst-auditmod3b.c (la_objsearch): Add a missing
	break.

2015-08-09  Andreas Schwab  <schwab@linux-m68k.org>

	* timezone/Makefile (tzbases, tzlinks, tzfiles): Don't define.
	(generated): Don't add $(addprefix z.,$(tzfiles)).

2015-08-09  Mike Frysinger  <vapier@gentoo.org>

	* nptl/tst-cancel-wrappers.sh: Change 3rd arg to gensub to 1.
	* scripts/sysd-rules.awk: Likewise.

2015-08-09  Mike Frysinger  <vapier@gentoo.org>

	* iconvdata/tst-tables.sh: Change echo -n to printf.
	* nss/db-Makefile: Likewise.
	* posix/tst-getconf.sh: Likewise.
	* stdio-common/tst-unbputc.sh: Likewise.

2015-08-09  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/hppa/bits/mman.h [__USE_MISC]: Move all