@@ -30,24 +30,6 @@
 # define OPENAT openat
 #endif
 
-
-#define OPENAT_NOT_CANCEL CONCAT (OPENAT)
-#define CONCAT(name) CONCAT2 (name)
-#define CONCAT2(name) __##name##_nocancel
-
-
-int
-OPENAT_NOT_CANCEL (int fd, const char *file, int oflag, mode_t mode)
-{
-
-  /* We have to add the O_LARGEFILE flag for openat64.  */
-#ifdef MORE_OFLAGS
-  oflag |= MORE_OFLAGS;
-#endif
-
-  return INLINE_SYSCALL (openat, 4, fd, file, oflag, mode);
-}
-
 #define UNDERIZE(name) UNDERIZE_1 (name)
 #define UNDERIZE_1(name) __##name
 #define __OPENAT UNDERIZE (OPENAT)
